did stuff, but can't remember what...

--- a/src/main/resources/values/strings_de_DE.properties
+++ b/src/main/resources/values/strings_de_DE.properties
@@ -1,11 +1,18 @@
 main_window_title=Lager Spiel
-balance_window_title=Bilanz
-tooltip_scrap_or_reject_order=Auftrag ablehnen oder Produkt verschrotten
-error_title_look_and_feel=Fehler
-error_message_look_and_feel=Fehler beim setzen des Look-and-Feel.
-error_title_heavy_stone=Fehler
-error_message_heavy_stone=Schwere Steine können nur ganz unten gelagert werden!
-error_title_medium_weight_stone=Fehler
-error_message_medium_weight_stone=Mittelschwere Steine können nicht auf dem obersten Regalboden gelagert werden!
+balance.window.title=Bilanz
+tooltip.scrap_or_reject_order=Auftrag ablehnen oder Produkt verschrotten
+error.title.look_and_feel=Fehler
+error.message.look_and_feel=Fehler beim setzen des Look-and-Feel.
+error.title.heavy_stone=Fehler
+error.message.heavy_stone=Schwere Steine können nur ganz unten gelagert werden!
+error.title.medium_weight_stone=Fehler
+error.message.medium_weight_stone=Mittelschwere Steine können nicht auf dem obersten Regalboden gelagert werden!
 balance=Kontostand
-balance_window_column_names=Umsatz,Aktion,Produkt
+balance.window.column_names.revenue=Umsatz
+balance.window.column_names.action=Aktion
+balance.window.column_names.product=Produkt
+tooltip.info=Info
+tooltip.new_order=Neuer Auftrag
+tooltip.balance=Öffnet das Bilanzen Fenster
+info.window.title=Info
+info.window.heading=Tutorial
