added a tutorial window, the copyright notice and made some minor changes

--- a/src/main/resources/values/strings_de_DE.properties
+++ b/src/main/resources/values/strings_de_DE.properties
@@ -1,18 +1,48 @@
-main_window_title=Lager Spiel
-balance.window.title=Bilanz
+#
+# Copyright (c) 2023 Marko Salig.
+#
+# Licensed under the MIT license: https://opensource.org/licenses/MIT
+# Permission is granted to use, copy, modify, and redistribute the work.
+# Full license information available in the project LICENSE file.
+#
+
+main.window.title=LagerSpiel
+
+store=Einlagerung
+retrieve=Auslagerung
+
 tooltip.scrap_or_reject_order=Auftrag ablehnen oder Produkt verschrotten
+tooltip.info=Info
+tooltip.new_order=Neuer Auftrag
+tooltip.balance=Öffnet das Kontofenster
+
 error.title.look_and_feel=Fehler
-error.message.look_and_feel=Fehler beim setzen des Look-and-Feel.
+error.message.look_and_feel=Fehler beim Setzen des Look-and-Feel.
 error.title.heavy_stone=Fehler
 error.message.heavy_stone=Schwere Steine können nur ganz unten gelagert werden!
 error.title.medium_weight_stone=Fehler
 error.message.medium_weight_stone=Mittelschwere Steine können nicht auf dem obersten Regalboden gelagert werden!
+
 balance=Kontostand
+balance.window.title=Bilanz
 balance.window.column_names.revenue=Umsatz
 balance.window.column_names.action=Aktion
 balance.window.column_names.product=Produkt
-tooltip.info=Info
-tooltip.new_order=Neuer Auftrag
-tooltip.balance=Öffnet das Bilanzen Fenster
-info.window.title=Info
-info.window.heading=Tutorial
+balance.window.overall=Gesamt
+
+info.window.title=Tutorial
+info.window.finish=Beenden
+info.window.slide0.heading=Neuen Auftrag erhalten
+info.window.slide0.message=<html>Um einen neuen Auftrag zu erhalten, klicken Sie einfach auf das Pluszeichen.</html>
+info.window.slide1.heading=Auftragsart
+info.window.slide1.message=<html>Jeder neue Auftrag kann entweder ein Einlagerungsauftrag oder ein Auslagerungsauftrag sein.</html>
+info.window.slide2.heading=Auftrag bearbeiten
+info.window.slide2.message=<html>Vervollständigen Sie Ihren Auftrag, indem Sie ein Produkt in Ihren Lagerbereich ziehen oder eines aus Ihrem Lager in den LKW ziehen.</html>
+info.window.slide3.heading=Lagerbedingungen
+info.window.slide3.message=<html>Beachten Sie, dass schwere Steine unten gelagert werden sollten, während mittelschwere Steine nicht auf das oberste Regal gestellt werden können.</html>
+info.window.slide4.heading=Auftrag ablehnen
+info.window.slide4.message=<html>Um einen Auftrag abzulehnen, ziehen Sie das Produkt/den LKW einfach auf den Mülleimer. Seien Sie jedoch vorsichtig, denn bei Ablehnung des Auftrags wird der Preis des Produkts von Ihrem Konto abgezogen.</html>
+info.window.slide5.heading=Produkt verschrotten
+info.window.slide5.message=<html>Wenn Sie mehr Platz in Ihrem Lager benötigen, können Sie ein Produkt aus Ihrem Lager auf den Mülleimer ziehen. Dadurch wird der Lagerplatz freigegeben, allerdings kostet das Verschrotten Sie 300&#8364;.</html>
+info.window.slide6.heading=Das Ziel
+info.window.slide6.message=<html>Das Ziel des Spiels ist es, so viel Geld wie möglich zu verdienen und zum neuen Lagermeister zu werden!</html>
